Entidades e Insert Into

--- a/projeto-uniplanning/src/main/resources/application.properties
+++ b/projeto-uniplanning/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 quarkus.datasource.db-kind = mysql
 quarkus.datasource.username = Maria
 quarkus.datasource.password = Elo201205!
-quarkus.datasource.jdbc.url = jdbc:mysql://localhost:3306/projeto3
+quarkus.datasource.jdbc.url = jdbc:mysql://localhost:3306/Uniplanning
 
 # Estratégia de criação das tabela
 quarkus.hibernate-orm.schema-management.strategy = drop-and-create
